# Pocket-Flight-IMU-base-UAV-s-control-system

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml  requirements.txt
config/: imu_control.yaml
demos/: README.md
docs/: architecture.md  installation.md  usage.md
launch/: flood_monitor.launch  start.launch  tello_control.launch
research/: PocketPilot_ Smartphone IMU-Controlled Drone System.docx
src/: controller.py  data_visualizer.py  drone01.py  hector_control.py  imu_publisher.py  tello_controller.py
