<?xml version="1.0"?>
<package format="2">
  <name>pocketflight_imu</name>
  <version>1.0.0</version>
  <description>Smartphone IMU-controlled drone system using ROS</description>

  <maintainer email="yaroslav0523@gmail.com">Maydebura Yaroslav</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
</package>
